--- a/package.json
+++ b/package.json
@@ -24,11 +24,11 @@
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "mammoth": "^1.8.0",
-    "next": "14.2.5",
+    "next": "^14.2.12",
     "officeparser": "^4.1.1",
     "pdf-parse": "^1.1.1",
-    "react": "^18",
-    "react-dom": "^18",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
     "react-hook-form": "^7.52.2",
     "react-icons": "^5.2.1",
     "tailwind-merge": "^2.4.0",
