--- a/package.json
+++ b/package.json
@@ -9,10 +9,16 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@dnd-kit/core": "^6.1.0",
+    "@dnd-kit/sortable": "^8.0.0",
     "@hookform/resolvers": "^3.9.0",
     "@langchain/anthropic": "^0.2.12",
     "@langchain/community": "^0.2.23",
+    "@langchain/core": "^0.3.17",
+    "@langchain/google-genai": "^0.1.3",
     "@langchain/groq": "^0.0.16",
+    "@langchain/openai": "^0.3.12",
+    "@langchain/qdrant": "^0.1.0",
     "@lexical/react": "^0.18.0",
     "@radix-ui/react-accordion": "^1.2.0",
     "@radix-ui/react-dialog": "^1.1.2",
@@ -21,6 +27,7 @@
     "@radix-ui/react-popover": "^1.1.2",
     "@radix-ui/react-progress": "^1.1.0",
     "@radix-ui/react-select": "^2.1.2",
+    "@radix-ui/react-separator": "^1.1.0",
     "@radix-ui/react-slider": "^1.2.0",
     "@radix-ui/react-slot": "^1.1.0",
     "@radix-ui/react-tabs": "^1.1.1",
@@ -29,16 +36,23 @@
     "@supabase/supabase-js": "^2.45.3",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
-    "mammoth": "^1.8.0",
+    "docx": "^9.0.2",
+    "dompurify": "^3.1.7",
+    "framer-motion": "^11.11.11",
+    "html-to-pdfmake": "^2.5.14",
     "nanoid": "^5.0.7",
     "next": "^14.2.12",
     "officeparser": "^4.1.1",
     "pdf-parse": "^1.1.1",
+    "pdfmake": "^0.2.15",
+    "puppeteer-core": "^23.7.1",
     "quill": "^2.0.2",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-dropzone": "^14.3.3",
     "react-hook-form": "^7.52.2",
     "react-icons": "^5.2.1",
+    "react-pdf-html": "^2.1.2",
     "react-quill": "^2.0.0",
     "tailwind-merge": "^2.4.0",
     "tailwindcss-animate": "^1.0.7",
@@ -46,8 +60,10 @@
     "zod": "^3.23.8"
   },
   "devDependencies": {
+    "@types/dompurify": "^3.0.5",
     "@types/json-js": "^1.1.2",
     "@types/node": "^20",
+    "@types/pdf-parse": "^1.1.4",
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "eslint": "^8",
