--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "clsx": "^2.1.1",
     "docx": "^9.0.2",
     "dompurify": "^3.1.7",
+    "fflate": "^0.8.2",
     "framer-motion": "^11.11.11",
     "html-to-pdfmake": "^2.5.14",
     "nanoid": "^5.0.7",
