--- a/package.json
+++ b/package.json
@@ -56,6 +56,7 @@
     "react-icons": "^5.2.1",
     "react-pdf-html": "^2.1.2",
     "react-quill": "^2.0.0",
+    "sass": "^1.80.6",
     "tailwind-merge": "^2.4.0",
     "tailwindcss-animate": "^1.0.7",
     "vaul": "^1.1.0",
