--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "@supabase/ssr": "^0.5.1",
     "@supabase/supabase-js": "^2.45.3",
     "@vercel/analytics": "^1.3.2",
+    "axios": "^1.7.7",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "docx": "^9.0.2",
@@ -44,6 +45,7 @@
     "html-to-pdfmake": "^2.5.14",
     "nanoid": "^5.0.7",
     "next": "^14.2.12",
+    "nodemailer": "^6.9.16",
     "officeparser": "^4.1.1",
     "pdf-parse": "^1.1.1",
     "pdfmake": "^0.2.15",
@@ -54,6 +56,7 @@
     "react-dropzone": "^14.3.3",
     "react-hook-form": "^7.52.2",
     "react-icons": "^5.2.1",
+    "react-paystack": "^6.0.0",
     "react-pdf-html": "^2.1.2",
     "react-quill": "^2.0.0",
     "sass": "^1.80.6",
